src/youtube-music.css
/**
 * Overriding YouTube Music style
 */

/* Allow window dragging */
ytmusic-nav-bar {
  position: relative;
}
ytmusic-nav-bar::before {
  content: '';
  position: absolute;
  inset: 0;

  -webkit-user-select: none;
  -webkit-app-region: drag;
}

ytmusic-nav-bar > .left-content > *,
ytmusic-nav-bar > .center-content > *,
ytmusic-nav-bar > .right-content > * {
  -webkit-app-region: no-drag;
}


iron-icon,
ytmusic-pivot-bar-item-renderer,
.tab-title,
a {
  -webkit-app-region: no-drag;
}

/* custom style for navbar */
ytmusic-app-layout {
  --ytmusic-nav-bar-height: 90px;
}

/* Blocking annoying elements */
ytmusic-mealbar-promo-renderer {
  display: none !important;
}

/* Disable Image Selection */
img {
  -webkit-user-select: none;
  user-select: none;
}

/* Hide cast button which doesn't work */
ytmusic-cast-button {
  display: none !important;
}

/* Remove useless inaccessible button on top-right corner of the video player */
.ytp-chrome-top-buttons {
  display: none !important;
}

/* Make youtube-music logo un-draggable */
ytmusic-nav-bar > div.left-content > a,
ytmusic-nav-bar > div.left-content > a > picture > img {
  -webkit-user-drag: none;
}

/* yt-music bugs */
tp-yt-paper-item.ytmusic-guide-entry-renderer::before {
  border-radius: 8px !important;
}
/** apply fix when #av-id is exist */
ytmusic-player-page:not([video-mode]):not([player-fullscreened]) #av-id ~ #player.ytmusic-player-page {
  margin-top: calc(var(--ytmusic-player-page-vertical-padding) / 2 * -1) !important;
}

